--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 <script>
   // This is an adaption of https://github.com/jimporter/mike/issues/72#issuecomment-1545646389;
   // but simplified - just redirect to the stable 404.
+  // This is needed because otherwise, stuff like Cloudflare Pages will redirect endlessly.
+  
   window.location.href = window.location.href.replace("/", `/stable/404.html`);
 </script>
