--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@
   // but simplified - just redirect to the stable 404.
   // This is needed because otherwise, stuff like Cloudflare Pages will redirect endlessly.
   
-  window.location.href = window.location.href.replace("/", `/stable/404.html`);
+  window.location.href = "/stable/404.html";
 </script>
